// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Sidenav adds mini classes without sideBarOpen 1`] = `
.glamor-65 {
  color: #f44336;
}

.glamor-0 {
  color: #b0bec5;
}

.glamor-57 {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-6 {
  padding: 0px;
  height: 4.8rem;
  border-left: 3px solid transparent;
}

.glamor-6:hover {
  border-left: 3px solid #ff9800;
}

.glamor-4 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  min-width: 5rem;
  padding-top: 0px;
  padding-bottom: 0px;
}

.glamor-59 {
  margin: 0px;
}

.glamor-69 {
  background-color: #263238;
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
  width: 0;
  border-radius: 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  visibility: hidden;
}

.glamor-2 {
  color: #b0bec5;
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-transform: none;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 0;
}

.glamor-67 {
  display: none;
}

@media (min-width:600px) {
  .glamor-69 {
    height: calc(100% - 5rem);
    width: 5rem;
    position: fixed;
    visibility: visible;
  }
}

<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 glamor-68 glamor-69"
  open={false}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 glamor-56 glamor-57"
  >
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/tasks"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tasks glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={false}
            >
              Tasks
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="glamor-66 glamor-67"
  >
    <div
      className="glamor-64 glamor-65"
    >
      <p
        className="glamor-58 glamor-59"
      >
        Version Info
      </p>
      <p
        className="glamor-58 glamor-59"
      >
        Flexget: 
         
         
      </p>
      <p
        className="glamor-58 glamor-59"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;

exports[`components/layout/Sidenav renders correctly with sideBarOpen 1`] = `
.glamor-65 {
  color: #f44336;
}

.glamor-0 {
  color: #b0bec5;
}

.glamor-69 {
  background-color: #263238;
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: auto;
  width: 100vw;
  border-radius: 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  visibility: visible;
}

.glamor-57 {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-6 {
  padding: 0px;
  height: 4.8rem;
  border-left: 3px solid transparent;
}

.glamor-6:hover {
  border-left: 3px solid #ff9800;
}

.glamor-4 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  min-width: 5rem;
  padding-top: 0px;
  padding-bottom: 0px;
}

.glamor-2 {
  color: #b0bec5;
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-transform: none;
  visibility: visible;
  opacity: 1;
  -webkit-transition: visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: visibility 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: auto;
}

.glamor-67 {
  display: block;
}

.glamor-59 {
  margin: 0px;
}

@media (min-width:600px) {
  .glamor-69 {
    height: calc(100% - 5rem);
    width: 19rem;
    position: fixed;
    visibility: visible;
  }
}

<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 glamor-68 glamor-69"
  open={true}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 glamor-56 glamor-57"
  >
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/tasks"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 glamor-5 glamor-6"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 glamor-3 glamor-4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tasks glamor-0"
            />
            <p
              className="glamor-1 glamor-2"
              open={true}
            >
              Tasks
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="glamor-66 glamor-67"
  >
    <div
      className="glamor-64 glamor-65"
    >
      <p
        className="glamor-58 glamor-59"
      >
        Version Info
      </p>
      <p
        className="glamor-58 glamor-59"
      >
        Flexget: 
         
         
      </p>
      <p
        className="glamor-58 glamor-59"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;
